Version 1.1.1 -- Apr 2010
------------------------------------------------------------------
+ Updated for phpws Core 2.0.0
+ PHP strict fixes
+ Some code tidy up


Version 1.1.0 -- Nov 2008
------------------------------------------------------------------
+ Updated about file
+ Made phpws 1.6 compatible
+ Moved readme text to README file


Version 1.0.0 -- Mar 2008
------------------------------------------------------------------
May 17 - 19
+ Initial writing of mod